[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend code for BetterBilly"
authors = ["Cu64 <dongduongdev@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.111.0"}
pydantic-settings = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
